traefik/03-middlewares.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basicauth-traefik
  namespace: traefik
spec:
  basicAuth:
    secret: basicauth-traefik
    removeHeader: true
